<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="AnalogOutputParametersFB" Id="{c88c46c9-ad36-4d2f-906f-fabfc21039b1}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK AnalogOutputParametersFB
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="Update" Id="{31ec9ef0-ffad-4ab2-ba4f-287b0d7de1d0}">
      <Declaration><![CDATA[METHOD Update : BOOL
VAR_INPUT
	AO: REFERENCE TO GreenMasterAO_Base;
	Parameters: REFERENCE TO GreenMasterBaseParameters;
	AOut: AnalogOutputParameters;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[AO.F_QN1 := AOut.F_QN1;
AO.T_GQ1 := AOut.T_GQ1;
AO.F_GQ1 := AOut.F_GQ1;
AO.C_QN1 := AOut.C_QN1;
AO.H_QN1 := AOut.H_QN1;
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>